# rpa_boletin

./: .gitignore  README.md  ejecutar_boletin.bat  pyproject.toml
.github/: copilot-instructions.md
boletin/: .gitignore  MEMORY.md  README.md  Reglas_de_Negocio.docx  db.py  emailer.py  main.py  requirements.txt  retrier.py  scorer.py  scraper.py  sources.py  translator.py
boletin/templates/: boletin.html
docs/: README.md  despliegue_produccion.md  migracion_servidor.md
docs/arquitectura/: checklist_cierre_arquitectonico.md  decisiones_capas_y_facade_db.md  estructura_actual_boletin.md
docs/datos/: modelo_datos.md  modelo_relacional.md
docs/legacy/: README.md
docs/legacy/datos/: modelo_relacional.aql  modelo_relacional.mmd  modelo_relacional.sql  modelo_relacional_postgrest.sql
docs/legacy/duplicados/: README.updated.md  doc_modelo_datos.original.md  doc_reglas_negocio.original.md  indice.updated.md  modelo_relacional.updated.md
docs/legacy/ejecutiva/: diccionario_boletin.xlsx  documentacion_completa.docx
docs/legacy/operacion/: MEMORY.md  SKILL.md  requirements_original.txt
docs/negocio/: Reglas_de_Negocio.docx  reglas_negocio.md
docs/operacion/: README_sistema.md
scripts/debug/: debug_mining_weekly.py  inspect_selectors.py
scripts/exports/: generar_docx.py  generar_excel.py  run_excel.py
scripts/feeds/: actualizar_feeds.py  actualizar_rss.py  analizar_fuentes_xml_estricto.py  investigar_fuentes_xml.py
skills/rpa-boletin-analisis-fuentes/: SKILL.md
src/boletin/: __init__.py  main.py
tests/helper/: README.md
tests/output/: README.md
(+68 files in other folders)
